<package format="2">
    <name>goat_launch</name>
    <version>0.2.0</version>
    <description>Launchfiles for the GOAT.</description>
    <maintainer email="gregjm@umich.edu">Gregory Meyer</maintainer>
    <license>BSD 3-Clause License</license>

    <url type="repository">https://github.com/umigv/goat_launch</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>encoder_odometry</exec_depend>
    <exec_depend>goat_description</exec_depend>
    <exec_depend>imu_filter_madgwick</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>phidgets_imu</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>transform_imu</exec_depend>
</package>
